@@ -13,7 +13,7 @@
  <property name="filter_content_types">False</property>
  <property name="allowed_content_types"/>
  <property name="allow_discussion">False</property>
- <property name="default_view">fg_base_view</property>
+  <property name="default_view">base_edit</property>
  <property name="view_methods">
   <element value="fg_base_view"/>
  </property>
